<?php die(); ?>
Akeeba Panopticon 1.2.2
================================================================================
+ Optional environment variables-only configuration of containerized Panopticon [gh-696]
~ Do not log CMS Update Found more than once per version
# [LOW] Wrong lang string used in WordPress plugin/theme update emails
# [LOW] PHP warnings running Connection Doctor on WordPress sites
# [LOW] Wrong "email" label on Backup options [gh-771]

Akeeba Panopticon 1.2.1
================================================================================
! Fixing a chicken and egg issue not allowing the update to proceed correctly

Akeeba Panopticon 1.2.0
================================================================================
+ WordPress support [gh-38]
+ Much improved Docker support [gh-697]
+ Translatable dates
+ Load TinyMCE translations
+ Batch processing sites
+ Control email sending for scheduled backups [gh-712]
+ Auto-ban IPs after many failed login attempts
+ Check passwords against HIBP [gh-728]
~ System Configuration uses more Show On tricks to show/hide relevant settings
~ Expose the Avatars setting in System Configuration [gh-729]
~ Session data contents are now encrypted at rest
~ Session improvements
~ Expose the Behind Load Balancer configuration setting
~ Do not send a failure email if a site queued for update is already updated, or disabled
# [HIGH] Some tasks would disable MySQL autocommit without restoring it, leading to weird issues
# [MEDIUM] MaxExec task throws fatal exception when tasks are executed over the web
# [LOW] Wrong message about not having Akeeba Backup installed shown when adding a new site [gh-661]
# [LOW] Wrong language in mail Blade templates [gh-658]
# [LOW] Groups for disabled sites may not be displayed in the Sites admin page
# [LOW] Connection doctor: sometimes ends up with an error page instead of showing what is going on with the connection